add the search box instead of activity_search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,13 +11,10 @@
     <string name="item_menu_clean_map">Clean map</string>
     <string name="dialog_save">Save</string>
     <string name="dialog_cancel">Cancel</string>
-    <string name="item_menu_search">Search</string>
-    <string name="search_for_places">Search for places</string>
-    <string name="input_search_hint">Search…</string>
-    <string name="button_search">Search</string>
     <string name="version_app">1.0</string>
     <string name="open_github">Open in Github</string>
     <string name="about">About</string>
     <string name="dialog_ok">OK</string>
+    <string name="search_fail">Sorry, we found no results!</string>
 
 </resources>
