--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
     <string name="dialog_ok">OK</string>
     <string name="search_fail">Sorry, we found no results!</string>
     <string name="same_result">A marker with the same title already exists!</string>
-    <string name="bad_connection">Bad internet connection!</string>
+    <string name="bad_connection">The Internet connection has been lost!</string>
 
 </resources>
